<resources>
    <string name="app_name">App Multimedia</string>
    <string name="titulo_logo">Logo Animado</string>
    <string name="nombre_autor">Diego</string>
    <string name="explicacion_logo">Dibujo compuesto por un círculo, rectángulo y elipse.</string>
    <string name="explicacion_nombre">Circulo con mi nombre incluido.</string>
    <string name="explicacion_aplicacion">¡Bienvenido a mi app multimedia! Elige una opción para comenzar.</string>
    <string name="boton_dibujo">Dibujo</string>
    <string name="boton_sonido">Sonido</string>
    <string name="boton_video">Vídeo</string>
    <string name="titulo_sonido">Reproductor de Sonidos</string>
    <string name="titulo_video">Reproductor de Videos</string>
    <string name="reproducir_video">Reproducir Vídeo</string>
    <string name="pausar_video">Pausar Video</string>
    <string name="sonido_2">Sonido 2</string>
    <string name="sonido_1">Sonido 1</string>
    <string name="reproducir_sonido1">Botón para reproducir sonido 1</string>
    <string name="progreso_sonido1">Progreso del Sonido 1</string>
    <string name="reproducir_sonido2">Botón para reproducir sonido 2</string>
    <string name="progreso_sonido2">Progreso del Sonido 2</string>
    <string name="ajuste_volumen">Ajuste de volumen</string>
</resources>