<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Título de la aplicación -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/color_nombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <!-- Descripción breve de la app -->

    <!-- Botón de Dibujo -->
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginTop="11dp"
        android:text="@string/explicacion_aplicacion"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnDrawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_dibujo"
        android:layout_below="@id/tvDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary" />

    <!-- Botón de Sonido -->
    <Button
        android:id="@+id/btnSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_sonido"
        android:layout_below="@id/btnDrawing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent" />

    <!-- Botón de Vídeo -->
    <Button
        android:id="@+id/btnVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_video"
        android:layout_below="@id/btnSound"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimaryDark" />
</RelativeLayout>
