<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    android:padding="20dp">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_sonido"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <!-- Botón de sonido 1 -->

    <!-- Etiqueta para el progreso del sonido 1 -->

    <ImageButton
        android:id="@+id/btnSound1"
        android:layout_width="90dp"
        android:layout_height="102dp"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="137dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circular_background"
        android:contentDescription="@string/reproducir_sonido1"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_sound1" />

    <TextView
        android:id="@+id/tvProgressLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso_sonido1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_below="@id/btnSound1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <!-- SeekBar para el progreso del sonido 1 -->
    <SeekBar
        android:id="@+id/seekBarProgress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProgressLabel1"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        android:thumb="@drawable/seekbar_thumb"
        android:progressDrawable="@drawable/seekbar_progress" />

    <!-- Botón de sonido 2 -->

    <!-- Etiqueta para el progreso del sonido 2 -->
    <ImageButton
        android:id="@+id/btnSound2"
        android:layout_width="119dp"
        android:layout_height="102dp"
        android:layout_below="@id/seekBarProgress1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circular_background"
        android:contentDescription="@string/reproducir_sonido2"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_sound2" />

    <TextView
        android:id="@+id/tvProgressLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso_sonido2"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_below="@id/btnSound2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <!-- SeekBar para el progreso del sonido 2 -->
    <SeekBar
        android:id="@+id/seekBarProgress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProgressLabel2"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
        android:thumb="@drawable/seekbar_thumb"
        android:progressDrawable="@drawable/seekbar_progress" />

    <!-- Etiqueta para el volumen -->
    <TextView
        android:id="@+id/tvVolumeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajuste_volumen"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_below="@id/seekBarProgress2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <!-- SeekBar para ajustar volumen -->
    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvVolumeLabel"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="50"
        android:thumb="@drawable/seekbar_thumb"
        android:progressDrawable="@drawable/seekbar_progress" />

</RelativeLayout>
